--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A Simple CSV Converter",
   "main": "csv.js",
   "scripts": {
-    "test": "node csv.js"
+    "test": "node test.js"
   },
   "repository": {
     "type": "git",
